# Ds-Agent-Platform

./: .coverage  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: generate_synthetic.py  sales_data.csv
src/ds_platform/: __init__.py
src/ds_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ds_platform/agents/: api.py  cleaning.py  eda.py  features.py  model.py  report.py  stats.py
tests/: test_api.py  test_cleaning.py  test_eda.py  test_features.py  test_model.py  test_report.py  test_stats.py
